--- a/src/main/resources/templates/fragments/client/custom_tour.html
+++ b/src/main/resources/templates/fragments/client/custom_tour.html
@@ -12,31 +12,31 @@
 
         <form class="px-5" id="booking-custom-form">
             <div class="row">
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                     <label class="form-label" th:text="#{form.name.label}">Name</label>
                     <input class="form-control my-2" type="text"
                            name="name" th:placeholder="#{form.name.holder}">
                 </div>
 
-                <div class="col-6 my-2">
+                <div class="col-12 col-md-6 my-2">
                     <label class="form-label">Email</label>
                     <input class="form-control" type="text"
                            name="email" th:placeholder="#{form.email.holder}">
                 </div>
 
-                <div class="col-6 my-2">
+                <div class="col-12 col-md-6 my-2">
                     <label class="form-label" th:text="#{form.phone.label}"></label>
                     <input class="form-control" type="text"
                            name="phone" th:placeholder="#{form.phone.holder}">
                 </div>
 
-                <div class="col-6 my-2">
+                <div class="col-12 col-md-6 my-2">
                     <label class="form-label" th:text="#{form.address.label}"></label>
                     <input class="form-control" type="text"
                            name="address" th:placeholder="#{form.address.holder}">
                 </div>
 
-                <div class="col-6 my-2">
+                <div class="col-12 col-md-6 my-2">
                     <label class="form-label" th:text="#{form.departureDate.label}">Ngày khởi hành dự kiến</label>
                     <input class="form-control" type="date"
                            name="departureDate">
@@ -46,19 +46,19 @@
                     <label class="form-label" th:text="#{form.number.label}">NHẬP SỐ LƯỢNG</label>
                 </div>
 
-                <div class="col-4 my-2">
+                <div class="col-12 col-md-4 my-2">
                     <label class="form-label" th:text="#{common.adults}">Người lớn</label>
                     <input class="form-control" type="number"
                            name="adultNumber" th:placeholder="#{form.number.holder}">
                 </div>
 
-                <div class="col-4 my-2">
+                <div class="col-12 col-md-4 my-2">
                     <label class="form-label" th:text="#{common.children}">Trẻ em</label>
                     <input class="form-control" type="number"
                            name="childNumber" th:placeholder="#{form.number.holder}">
                 </div>
 
-                <div class="col-4 my-2">
+                <div class="col-12 col-md-4 my-2">
                     <label class="form-label" th:text="#{common.babies}">Em bé</label>
                     <input class="form-control" type="number"
                            name="babyNumber" th:placeholder="#{form.number.holder}">
