--- a/src/main/resources/templates/pages/index.html
+++ b/src/main/resources/templates/pages/index.html
@@ -13,8 +13,8 @@
         <div class="container h-100">
             <div class="row justify-content-between align-items-center h-100">
                 <div class="col-md-8 mb-7">
-                    <h4>Lorem ipsum dolor sit amet</h4>
-                    <h1 class="display-4 font-weight-bold">Sed ut perspiciatis unde omnis </h1>
+                    <h4 class="text-white">Chào mừng bạn đến với</h4>
+                    <h1 class="display-4 font-weight-bold text-white">World Story Travel</h1>
                 </div>
             </div>
         </div>
@@ -145,8 +145,8 @@
                             class="fas fa-angle-double-right ml-2"></i></a>
                 </div>
             </div>
-            <div style="display: grid; grid-template-columns: 2fr 1fr 1fr; grid-template-rows: 250px 250px; grid-gap: 10px; height: 500px">
-                <div style="grid-column-start: 1; grid-row-start: 1; grid-row-end: 3;" class="h-100">
+            <div class="grid-custom">
+                <div style="grid-column-start: 1; grid-row-start: 1; grid-row-end: 3;" class="h-100 grid-custom-item">
                     <a th:href="@{/tour/{id}(id=${top5Tours.getContent().get(0).id})}">
                         <div class="list-mig-like-com m-0 h-100">
                             <div class="list-mig-lc-img h-100">
@@ -160,7 +160,7 @@
                             </div>
                         </div>
                     </a></div>
-                <div th:each="tour : ${top5Tours}" th:if="${tourStat.index > 0}" class="h-100">
+                <div th:each="tour : ${top5Tours}" th:if="${tourStat.index > 0}" class="h-100 grid-custom-item">
                     <a th:href="@{/tour/{id}(id=${tour.id})}" class="h-100 d-block">
                         <div class="list-mig-like-com h-100 m-0">
                             <div class="list-mig-lc-img h-100">
