--- a/src/main/resources/templates/pages/tours_list.html
+++ b/src/main/resources/templates/pages/tours_list.html
@@ -69,7 +69,7 @@
                                         <div class="custom-control custom-switch">
                                             <input id="instantBook" type="checkbox" class="custom-control-input"
                                                    name="domestic" value="1" th:checked="${param.domestic}">
-                                            <label for="instantBook" class="custom-control-label"> <span class="text-sm"
+                                            <label for="instantBook" class="custom-control-label"> <span class="text-sm" style="display: block"
                                                                                                          th:text="#{common.domestic}">Trong nước</span></label>
                                         </div>
                                     </li>
@@ -77,7 +77,7 @@
                                         <div class="custom-control custom-switch">
                                             <input id="superhost" type="checkbox" class="custom-control-input"
                                                    name="foreign" value="1" th:checked="${param.foreign}">
-                                            <label for="superhost" class="custom-control-label"> <span class="text-sm"
+                                            <label for="superhost" class="custom-control-label"> <span class="text-sm" style="display: block"
                                                                                                        th:text="#{common.foreign}">Ngoài nước</span></label>
                                         </div>
                                     </li>
