--- a/src/main/resources/templates/fragments/client/header.html
+++ b/src/main/resources/templates/fragments/client/header.html
@@ -36,10 +36,10 @@
                     </div>
                     <!-- Top info -->
                     <ul class="nav list-unstyled ml-3">
-                        <li class="nav-item mr-3"><a class="navbar-link" href="#"><strong>Phone:</strong> (024) 123-1457</a>
+                        <li class="nav-item mr-3"><a class="navbar-link" href="#"><strong>Phone:</strong> (036) 515-1354</a>
                         </li>
                         <li class="nav-item mr-3"><a class="navbar-link" href="#"><strong>Email:</strong>
-                            help@TravelGo.com</a></li>
+                            chuan14402@gmail.com</a></li>
                     </ul>
                 </div>
 
