--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -14,7 +14,7 @@
     <link href="/images/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72">
     <link href="/images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114">
     <link href="/images/apple-touch-icon-144x144.png" rel="apple-touch-icon" sizes="144x144">
-    <title>TravelGo - Travel, Tour Booking HTML5 Template</title>
+    <title>WorldStoryTravel - Travel, Tour, Hotel Booking</title>
 </head>
 <body>
 <header th:replace="~{fragments/client/header}"></header>
