--- a/src/main/resources/templates/pages/index.html
+++ b/src/main/resources/templates/pages/index.html
@@ -29,9 +29,9 @@
                     <div class="feature-box h-100">
                         <div class="tab_container">
                             <input id="tab1" type="radio" name="tabs" checked>
-                            <label for="tab1"><i class="fas fa-route"></i><span th:text="#{common.tours}">Tours</span></label>
+                            <label for="tab1"><i class="fas fa-route"></i><span style="display:block;" th:text="#{common.tours}">Tours</span></label>
                             <input id="tab2" type="radio" name="tabs">
-                            <label for="tab2"><i class="fas fa-utensils"></i><span th:text="#{common.hotel}">Hotels</span></label>
+                            <label for="tab2"><i class="fas fa-utensils"></i><span style="display:block;" th:text="#{common.hotel}">Hotels</span></label>
 <!--                            <input id="tab3" type="radio" name="tabs">-->
 <!--                            <label for="tab3"><i class="fas fa-helicopter"></i><span th:text="#{common.flight}">Flights</span></label>-->
 
