--- a/src/main/resources/templates/fragments/admin/aside.html
+++ b/src/main/resources/templates/fragments/admin/aside.html
@@ -60,7 +60,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white" th:href="@{/auth/login-admin}">
+                <a class="nav-link text-white" th:href="@{/logout}">
                     <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="material-icons opacity-10">login</i>
                     </div>
