--- a/src/main/resources/templates/fragments/admin/aside.html
+++ b/src/main/resources/templates/fragments/admin/aside.html
@@ -62,7 +62,7 @@
             <li class="nav-item">
                 <a class="nav-link text-white" th:href="@{/logout}">
                     <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-                        <i class="material-icons opacity-10">login</i>
+                        <i class="material-icons opacity-10">loginn</i>
                     </div>
                     <span class="nav-link-text ms-1">Sign Out</span>
                 </a>
