--- a/src/main/resources/templates/layout_admin.html
+++ b/src/main/resources/templates/layout_admin.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>
-        Material Dashboard 2 by Creative Tim
+        WorldStoryTravel Admin
     </title>
 
 
