--- a/src/main/resources/templates/fragments/client/custom_tour.html
+++ b/src/main/resources/templates/fragments/client/custom_tour.html
@@ -6,7 +6,7 @@
     <div class="container">
         <div class="col-12 mx-auto">
             <div class="text-center px-0 px-sm-5">
-                <p class="mb-3 lead">Đặt tour theo yêu cầu khách hàng</p>
+                <p class="mb-3 lead" th:text="#{text.custom_book_header}">Đặt tour theo yêu cầu khách hàng</p>
             </div>
         </div>
 
