--- a/src/main/resources/templates/fragments/admin/aside.html
+++ b/src/main/resources/templates/fragments/admin/aside.html
@@ -5,14 +5,13 @@
            aria-hidden="true" id="iconSidenav"></i>
         <a class="navbar-brand m-0" href="https://demos.creative-tim.com/material-dashboard/pages/dashboard"
            target="_blank">
-            <img src="../assets/img/logo-ct.png" class="navbar-brand-img h-100" alt="logo">
             <span class="ms-1 font-weight-bold text-white">World Story Travel</span>
         </a>
     </div>
     <hr class="horizontal light mt-0 mb-2">
     <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
         <ul class="navbar-nav">
-            <li class="nav-item">
+            <li class="nav-item" th:if="${#authentication.authorities.contains(ADMIN)}">
                 <a th:class="${#strings.equals(servletPath, '/admin/user')? 'active nav-link text-white bg-gradient-primary': 'nav-link text-white'}"
                    th:href="@{/admin/user}">
                     <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
