--- a/src/main/resources/templates/pages/admin/sign-in.html
+++ b/src/main/resources/templates/pages/admin/sign-in.html
@@ -54,13 +54,13 @@
                         <div class="card-body">
                             <form  class="text-start" method="post" th:action="@{/auth/login-admin}">
                                 <p class="text-danger" th:if="${param.error}" th:text="#{form.error.login}"></p>
-                                <div class="input-group input-group-outline my-3">
-                                    <label class="form-label">Email</label>
-                                    <input type="email" name="email" class="form-control">
+                                <div class="input-group input-group-outline my-3 is-filled">
+                                    <label for="email" class="form-label">Email</label>
+                                    <input id="email" type="email" name="email" value="chuan14402@gmail.com" class="form-control">
                                 </div>
-                                <div class="input-group input-group-outline mb-3">
+                                <div class="input-group input-group-outline mb-3 is-filled">
                                     <label class="form-label">Password</label>
-                                    <input type="password" name="password" class="form-control">
+                                    <input type="password" value="123456" name="password" class="form-control">
                                 </div>
 
                                 <div class="text-center">
