--- a/src/main/resources/templates/pages/index.html
+++ b/src/main/resources/templates/pages/index.html
@@ -13,8 +13,14 @@
         <div class="container h-100">
             <div class="row justify-content-between align-items-center h-100">
                 <div class="col-md-8 mb-7">
-                    <h4 class="text-white">Chào mừng bạn đến với</h4>
+                    <h4 class="text-white" th:text="#{common.welcome}">Chào mừng bạn đến với</h4>
                     <h1 class="display-4 font-weight-bold text-white">World Story Travel</h1>
+                    <a href="/admin">
+                        <button class="btn btn-primary btn-lg btn-grad">
+                            <span class="font-weight-bold text-white">Di chuyển đến trang admin (demo)</span>
+                        </button>
+                    </a>
+
                 </div>
             </div>
         </div>
