--- a/src/main/resources/templates/fragments/admin/aside.html
+++ b/src/main/resources/templates/fragments/admin/aside.html
@@ -11,6 +11,15 @@
     <hr class="horizontal light mt-0 mb-2">
     <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
         <ul class="navbar-nav">
+            <li class="nav-item">
+                <a th:class="${#strings.equals(servletPath, '/admin')? 'active nav-link text-white bg-gradient-primary': 'nav-link text-white'}"
+                   th:href="@{/admin}">
+                    <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+                        <i class="material-icons opacity-10">home</i>
+                    </div>
+                    <span class="nav-link-text ms-1">Trang chủ</span>
+                </a>
+            </li>
             <li class="nav-item" th:if="${#authentication.authorities.contains(ADMIN)}">
                 <a th:class="${#strings.equals(servletPath, '/admin/user')? 'active nav-link text-white bg-gradient-primary': 'nav-link text-white'}"
                    th:href="@{/admin/user}">
@@ -50,14 +59,14 @@
             <li class="nav-item mt-3">
                 <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Account pages</h6>
             </li>
-            <li class="nav-item">
-                <a class="nav-link text-white " href="../pages/profile.html">
-                    <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-                        <i class="material-icons opacity-10">person</i>
-                    </div>
-                    <span class="nav-link-text ms-1">Profile</span>
-                </a>
-            </li>
+<!--            <li class="nav-item">-->
+<!--                <a class="nav-link text-white " href="../pages/profile.html">-->
+<!--                    <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">-->
+<!--                        <i class="material-icons opacity-10">person</i>-->
+<!--                    </div>-->
+<!--                    <span class="nav-link-text ms-1">Profile</span>-->
+<!--                </a>-->
+<!--            </li>-->
             <li class="nav-item">
                 <a class="nav-link text-white" th:href="@{/logout}">
                     <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
