--- a/src/main/resources/templates/pages/admin/tour_booking.html
+++ b/src/main/resources/templates/pages/admin/tour_booking.html
@@ -77,11 +77,11 @@
                                     <td class="align-middle text-center text-sm">
                                         <span th:text="${booking.state.name()}"></span>
                                     </td>
-                                    <td class="align-middle">
-                                        <form method="post">
-                                            <button type="submit" class="btn">Đã xử lý</button>
-                                        </form>
-                                    </td>
+<!--                                    <td class="align-middle">-->
+<!--                                        <form method="post">-->
+<!--                                            <button type="submit" class="btn">Đã xử lý</button>-->
+<!--                                        </form>-->
+<!--                                    </td>-->
                                 </tr>
                                 </tbody>
                             </table>
